tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/destinationrule/only_idletimeout_specified_in_DR/_test_context/DestinationRule.3912502806.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: idletimeout-dr
  namespace: echo-2-98059
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 100s
    tls:
      mode: DISABLE
